Fixed layout issues.

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -68,7 +68,5 @@ h1 {
         rgba(143, 28, 229, 0) 100%
       ),
       linear-gradient(98deg, #5bc6f3 0%, #450aaf 100%);
-    outline: rgba(255, 255, 255, 0.1) 1px solid;
-    filter: drop-shadow(0px 0px 64px rgba(52, 119, 242, 0.25));
   }
 }
